chore: fix link
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -11,7 +11,7 @@ tableOfContents: false
 prev: false
 next:
   label: Core Concepts
-  link: /docs/getting-started/core-concepts/
+  link: /docs/core-concepts/
 ---
 
 import {Aside} from '@astrojs/starlight/components';
