fix: absolute links
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/2025-02-17-distr-v1-release.mdx
+++ b/src/content/blog/2025-02-17-distr-v1-release.mdx
@@ -35,7 +35,7 @@ This feature enables and simplifies the management of environment variables in y
 
 - **Why it matters:** Managing environment variables can be tricky, especially in complex applications. With this feature, you can centralize and simplify env management, reducing errors and making it easier to maintain consistency across different environments.
 
-- **How to get started:** Check out the [guide](https://distr.sh/docs/guides/docker-env-var-template/) on how to manage environment variables in Docker Compose files.
+- **How to get started:** Check out the [guide](/docs/guides/docker-env-var-template/) on how to manage environment variables in Docker Compose files.
 
 ![env-management](../../assets/blog/2025-02-17-distr-1-1-release/docker-env-management.png)
 
