--- a/src/content/blog/container-image-registry-comparison.mdx
+++ b/src/content/blog/container-image-registry-comparison.mdx
@@ -317,13 +317,13 @@ This is where purpose-built external registries like Distr come in, addressing t
 
 ![Distr OCI registry](../../assets/blog/2025-04-07-registry-comparison/distr-cr.png)
 
-[Distr](https://distr.sh/) comes with an OCI-compliant [artifact registry](https://distr.sh/docs/product/registry/) natively built into the platform.
+[Distr](/) comes with an OCI-compliant [artifact registry](/docs/product/registry/) natively built into the platform.
 
 Distr itself is [fully open source on GitHub](https://github.com/glasskube/distr/) and can be self-hosted.
-It not only features a [vendor portal](https://distr.sh/docs/product/vendor-portal/) that allows software and AI companies to manage their artifacts,
+It not only features a [vendor portal](/docs/product/vendor-portal/) that allows software and AI companies to manage their artifacts,
 invite end customers, and manage their licenses and access policies to specific tags of an image or version of an application.
 
-It also comes with a [customer portal](https://distr.sh/docs/product/customer-portal/) where end customers see all available artifacts and can create access tokens to interact with the registry.
+It also comes with a [customer portal](/docs/product/customer-portal/) where end customers see all available artifacts and can create access tokens to interact with the registry.
 
 **Key features:**
 
@@ -367,5 +367,5 @@ Built for Independent Software Vendors (ISVs), B2B platforms, and enterprise sof
   **GitHub Container Registry** and **Docker Hub** are ideal for distributing public artifacts to a wide audience with minimal setup.
   They're straightforward to adopt, work well with standard dev tooling, and are commonly known.
 - **Commercial open source projects and SaaS vendors that want to offer self-managed deployment options**:
-  **[Distr](https://distr.sh/)** is built for software vendors distributing artifacts to external customer environments, including regulated, self-managed, or air-gapped deployments.
+  **[Distr](/)** is built for software vendors distributing artifacts to external customer environments, including regulated, self-managed, or air-gapped deployments.
   It offers granular access controls, usage tracking, and flexible deployment models that internal or public registries can't deliver.
