--- a/src/content/blog/distr-dashboard.mdx
+++ b/src/content/blog/distr-dashboard.mdx
@@ -56,9 +56,9 @@ To be quite frank, our users didn't mind having these components on our old dash
 <br />
 <br />
 
-With the recent [introduction of our container registry](https://distr.sh/docs/product/registry/) we are now also supporting
-[fully self-managed](https://distr.sh/docs/use-cases/fully-self-managed/) environments
-in addition to agent-based [assisted self-managed](https://distr.sh/docs/use-cases/assisted-self-managed/) environments.
+With the recent [introduction of our container registry](/docs/product/registry/) we are now also supporting
+[fully self-managed](/docs/use-cases/fully-self-managed/) environments
+in addition to agent-based [assisted self-managed](/docs/use-cases/assisted-self-managed/) environments.
 
 ## Current version of the Distr Dashboard
 
@@ -98,8 +98,8 @@ With the introduction of cards we are now able to display a list of all deployed
 Deployment target metrics have been introduced in [Distr v1.9](https://github.com/glasskube/distr/releases/tag/1.9.0).
 We extended our agent to not only reconcile the application deployment but also collect—if configured—metrics from the target.
 
-Read more about the [Docker Metrics Collection](https://distr.sh/docs/product/agents/#docker-metrics) and
-[Kubernetes Metrics Collection](https://distr.sh/docs/product/agents/#kubernetes-metrics) in our documentation.
+Read more about the [Docker Metrics Collection](/docs/product/agents/#docker-metrics) and
+[Kubernetes Metrics Collection](/docs/product/agents/#kubernetes-metrics) in our documentation.
 
 These newly introduced metrics allow us to calculate the CPU and memory utilization of the deployment targets.
 These metrics allow you to spot any resource constraints directly on the Dashboard.
