--- a/src/content/blog/distr-docker-swarm.mdx
+++ b/src/content/blog/distr-docker-swarm.mdx
@@ -76,7 +76,7 @@ Keep in mind that you currently can't enable or disable Swarm mode for existing 
 
 Once Swarm mode is turned on, the Distr Docker Agent will use the Docker Stack API to deploy your application's Compose file.
 It will also use the Docker Service API to monitor your application's health metrics and log streams (coming soon).
-If you want to learn more about Docker Swarm mode in Distr, definitely check out our [documentation](https://distr.sh/docs/product/agents/#docker-swarm)!
+If you want to learn more about Docker Swarm mode in Distr, definitely check out our [documentation](/docs/product/agents/#docker-swarm)!
 
 Have you tried out the new Docker Swarm mode in Distr yet?
 We'd love to hear your thoughts, as we're on a mission to create the best application distribution solution possible!
