--- a/src/content/blog/distr-registry.mdx
+++ b/src/content/blog/distr-registry.mdx
@@ -26,7 +26,7 @@ import artifactsDark from '../../assets/blog/2025-05-22-distr-registry/lw-artifa
 import deployLogsLight from '../../assets/blog/2025-05-22-distr-registry/lw-deploy-logs-light.png';
 import deployLogsDark from '../../assets/blog/2025-05-22-distr-registry/lw-deploy-logs-dark.png';
 
-Today, we are happy to announce that the Distr [artifact registry](https://distr.sh/docs/product/registry/) is now Generally Available (GA).
+Today, we are happy to announce that the Distr [artifact registry](/docs/product/registry/) is now Generally Available (GA).
 
 Manage and distribute container images, [Helm charts](/glossary/helm-chart/), and other [OCI artifacts](/glossary/oci-container-artifact-registry/) with license-based access control, audit logs, and a visual UI that makes [self-managed](/glossary/self-managed-software/) software distribution pretty darn simple if we do say so ourselves, built for both you and your customers.
 
@@ -34,8 +34,8 @@ Manage and distribute container images, [Helm charts](/glossary/helm-chart/), an
 
 ## Why we built a registry into Distr
 
-Distr was originally built to help vendors manage software distribution in agent based [assisted self-managed](https://distr.sh/docs/use-cases/assisted-self-managed/) environments.
-But as end customers increasingly requested full control over their deployments, vendors needed a way to offer a [fully self-managed model](https://distr.sh/docs/use-cases/fully-self-managed/) as well.
+Distr was originally built to help vendors manage software distribution in agent based [assisted self-managed](/docs/use-cases/assisted-self-managed/) environments.
+But as end customers increasingly requested full control over their deployments, vendors needed a way to offer a [fully self-managed model](/docs/use-cases/fully-self-managed/) as well.
 Other third-party registries lacked the fine-grained access controls and visibility these scenarios call for, so that's why we built an OCI-compliant registry directly into Distr, enabling both assisted and fully self-managed distribution, with features like tag-based access control and detailed download logs.
 
 ## Why is Self-Managed artifact distribution hard?
@@ -61,7 +61,7 @@ With Distr's built-in registry, those problems are largely mitigated and planned
 
 ## Meet the Distr Artifact Registry
 
-Built for software vendors who serve end-customer with different [deployment appetites](https://distr.sh/docs/use-cases/fully-self-managed/), our registry brings OCI-compliant artifact distribution natively integrated into Distr.
+Built for software vendors who serve end-customer with different [deployment appetites](/docs/use-cases/fully-self-managed/), our registry brings OCI-compliant artifact distribution natively integrated into Distr.
 
 Here are a few of its key features:
 
@@ -150,9 +150,9 @@ We’re just getting started, here’s what’s coming soon:
 The Distr container registry has already distributed thousands of artifact versions to end customers.
 Often completely white-labeled, with a custom CNAME DNS record, as part of a vendors software supply distribution stack.
 
-The registry is available now in all Distr accounts. Just head to the Artifacts tab in the dashboard to [get started](https://distr.sh/docs/guides/container-registry/).
+The registry is available now in all Distr accounts. Just head to the Artifacts tab in the dashboard to [get started](/docs/guides/container-registry/).
 
-- Read the [docs](https://distr.sh/docs/product/registry/)
+- Read the [docs](/docs/product/registry/)
 - Contact us for a [demo](https://cal.glasskube.com/team/gk/demo)
 
 We are excited to hear your thoughts on the registry and open to your feedback to further shape the product to make it as useful as possible for vendors and end-customers alike.
