--- a/src/content/docs/docs/getting-started/subscription.mdx
+++ b/src/content/docs/docs/getting-started/subscription.mdx
@@ -38,7 +38,7 @@ The Starter plan is perfect for teams testing the distribution flow with a small
 
 <Aside type="note">
   For detailed feature comparisons and limits, visit our [pricing
-  page](https://distr.sh/pricing/).
+  page](/pricing/).
 </Aside>
 
 ## Pro Plan
@@ -94,7 +94,7 @@ You're not just distributing software anymore — but also documentation, suppor
 
 <Aside type="note">
   Enterprise plans include custom pricing based on your specific needs. [Contact
-  us](https://distr.sh/contact/) to discuss Enterprise options.
+  us](/contact/) to discuss Enterprise options.
 </Aside>
 
 ## Making Your Decision
@@ -134,6 +134,6 @@ For more information about self-hosting options, deployment methods, and how to 
 ## Next Steps
 
 1. **Start your trial** - All new organizations get a 30-day Pro Trial. [Create your account](https://signup.distr.sh) to begin.
-2. **Review pricing** - See current pricing and calculate costs on our [pricing page](https://distr.sh/pricing/).
+2. **Review pricing** - See current pricing and calculate costs on our [pricing page](/pricing/).
 3. **Learn about trials** - Understand how the 30-day trial works in our [trial guide](/docs/free-trial/).
 4. **Manage your subscription** - Once you've chosen a plan, learn how to manage it in our [subscription management guide](/docs/product/subscription-management/).
