--- a/src/content/docs/docs/product/subscription-management.mdx
+++ b/src/content/docs/docs/product/subscription-management.mdx
@@ -17,7 +17,7 @@ Distr provides three subscription tiers:
 - **Pro** - For rolling out to multiple customers with license management and RBAC
 - **Enterprise** - For organizations using Distr as their complete commercial platform
 
-For detailed feature comparisons, limits, and pricing, visit our [pricing page](https://distr.sh/pricing/). To understand which plan is right for your needs, see our guide on [choosing a plan](/docs/subscription/).
+For detailed feature comparisons, limits, and pricing, visit our [pricing page](/pricing/). To understand which plan is right for your needs, see our guide on [choosing a plan](/docs/subscription/).
 
 <Aside type="tip">
   New organizations start with a 30-day Pro Trial. Learn more about how trials
@@ -134,7 +134,7 @@ Each subscription tier has specific limits on:
 - **Deployments** - The number of deployments per customer organization
 - **Registry Storage** - The amount of artifact storage available
 
-For specific limits per plan, visit our [pricing page](https://distr.sh/pricing/).
+For specific limits per plan, visit our [pricing page](/pricing/).
 
 ### Limit Enforcement
 
