--- a/src/content/glossary/software-license-management.mdx
+++ b/src/content/glossary/software-license-management.mdx
@@ -22,7 +22,7 @@ It's a key part of how software is packaged and distributed not just an operatio
 As more vendors offer software for on-premises, hybrid, and air-gapped environments, license management systems must adapt.
 Modern license enforcement goes beyond serial keys or cloud checks, it integrates with how software is packaged and distributed.
 
-In platforms like [Distr](https://distr.sh/docs/guides/license-mgmt/), embed licensing directly into the distribution flow, which not only secures access but also improves transparency and control for both vendor and customer.
+In platforms like [Distr](/docs/guides/application-licenses/), embed licensing directly into the distribution flow, which not only secures access but also improves transparency and control for both vendor and customer.
 
 ## Types of Software License Enforcement
 
