--- a/src/content/blog/distr-docs.mdx
+++ b/src/content/blog/distr-docs.mdx
@@ -283,6 +283,6 @@ We would like to get your opinion.
 Which of the two documentation frameworks do you prefer?
 
 - [`glasskube.dev`](https://glasskube.dev) built with Docusaurus
-- [`distr.sh`](https://distr.sh/docs/) built with Starlight
+- [`distr.sh`](/docs/) built with Starlight
 
 P.S.: Read all our announcements of this week's launch week here: [`#distr-launch-week`](/blog/)
