chore: improve table headers
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/product/rbac.mdx
+++ b/src/content/docs/docs/product/rbac.mdx
@@ -30,42 +30,42 @@ Distr uses a role-based permission system with three standard roles that apply t
 
 Vendor roles apply to your internal team members who access the Vendor Portal.
 
-| Permission                            | Administrator | User | Viewer |
-| ------------------------------------- | ------------- | ---- | ------ |
-| **View Dashboard**                    | ✅            | ✅   | ✅     |
-| **View Applications and Deployments** | ✅            | ✅   | ✅     |
-| **Edit Applications and Deployments** | ✅            | ✅   | ❌     |
-| **View Artifacts and Downoads**       | ✅            | ✅   | ✅     |
-| **Create Personal Access Tokens**     | ✅            | ✅   | ✅     |
-| **Push Artifacts**                    | ✅            | ✅   | ❌     |
-| **Pull Artifacts**                    | ✅            | ✅   | ✅     |
-| **View Licenses**                     | ✅            | ✅   | ✅     |
-| **Create/Edit/Delete Licenses**       | ✅            | ✅   | ❌     |
-| **View Customers**                    | ✅            | ✅   | ✅     |
-| **Invite/Manage Customers**           | ✅            | ✅   | ❌     |
-| **View Users**                        | ✅            | ❌   | ❌     |
-| **Invite/Manage Users**               | ✅            | ❌   | ❌     |
-| **Manage Branding**                   | ✅            | ✅   | ❌     |
-| **View Subscription**                 | ✅            | ❌   | ❌     |
-| **Manage Subscription**               | ✅            | ❌   | ❌     |
-| **View and Manage Org Settings**      | ✅            | ❌   | ❌     |
+| Permission                            | Admin | User | Viewer |
+| ------------------------------------- | ----- | ---- | ------ |
+| **View Dashboard**                    | ✅    | ✅   | ✅     |
+| **View Applications and Deployments** | ✅    | ✅   | ✅     |
+| **Edit Applications and Deployments** | ✅    | ✅   | ❌     |
+| **View Artifacts and Downoads**       | ✅    | ✅   | ✅     |
+| **Create Personal Access Tokens**     | ✅    | ✅   | ✅     |
+| **Push Artifacts**                    | ✅    | ✅   | ❌     |
+| **Pull Artifacts**                    | ✅    | ✅   | ✅     |
+| **View Licenses**                     | ✅    | ✅   | ✅     |
+| **Create/Edit/Delete Licenses**       | ✅    | ✅   | ❌     |
+| **View Customers**                    | ✅    | ✅   | ✅     |
+| **Invite/Manage Customers**           | ✅    | ✅   | ❌     |
+| **View Users**                        | ✅    | ❌   | ❌     |
+| **Invite/Manage Users**               | ✅    | ❌   | ❌     |
+| **Manage Branding**                   | ✅    | ✅   | ❌     |
+| **View Subscription**                 | ✅    | ❌   | ❌     |
+| **Manage Subscription**               | ✅    | ❌   | ❌     |
+| **View and Manage Org Settings**      | ✅    | ❌   | ❌     |
 
 ### Customer Organization Roles
 
 Customer roles apply to end users who access the Customer Portal for a specific customer organization.
 
-| Permission                         | Administrator | User | Viewer |
-| ---------------------------------- | ------------- | ---- | ------ |
-| **View Dashboard**                 | ✅            | ✅   | ✅     |
-| **View Deployments**               | ✅            | ✅   | ✅     |
-| **Create/Edit/Delete Deployments** | ✅            | ✅   | ❌     |
-| **Create Personal Access Tokens**  | ✅            | ✅   | ✅     |
-| **Push Artifacts**                 | ✅            | ✅   | ❌     |
-| **Pull Artifacts**                 | ✅            | ✅   | ✅     |
-| **View Documentation**             | ✅            | ✅   | ✅     |
-| **View Users**                     | ✅            | ❌   | ❌     |
-| **Invite/Manage Users**            | ✅            | ❌   | ❌     |
-| **Manage Customer Settings**       | ✅            | ❌   | ❌     |
+| Permission                         | Admin | User | Viewer |
+| ---------------------------------- | ----- | ---- | ------ |
+| **View Dashboard**                 | ✅    | ✅   | ✅     |
+| **View Deployments**               | ✅    | ✅   | ✅     |
+| **Create/Edit/Delete Deployments** | ✅    | ✅   | ❌     |
+| **Create Personal Access Tokens**  | ✅    | ✅   | ✅     |
+| **Push Artifacts**                 | ✅    | ✅   | ❌     |
+| **Pull Artifacts**                 | ✅    | ✅   | ✅     |
+| **View Documentation**             | ✅    | ✅   | ✅     |
+| **View Users**                     | ✅    | ❌   | ❌     |
+| **Invite/Manage Users**            | ✅    | ❌   | ❌     |
+| **Manage Customer Settings**       | ✅    | ❌   | ❌     |
 
 <Aside type="tip">
   Customer organization administrators can manage users within their own
