--- a/src/content/docs/docs/getting-started/free-trial.mdx
+++ b/src/content/docs/docs/getting-started/free-trial.mdx
@@ -29,7 +29,7 @@ When you create a new Distr organization, you automatically receive a **30-day P
 
 If you haven't selected a subscription plan before your trial expires:
 
-1. **Service Access** - You'll be redirected to the subscription selection page
+1. **Vendor Portal Access** - You'll be redirected to the subscription page and will not be able to access Distr
 2. **Data Retention** - Your data, customers, and deployments remain intact
 3. **No Automatic Charges** - You won't be charged until you actively select a subscription plan
 
