chore: remove customer onboarding guide
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/use-cases/air-gapped.mdx
+++ b/src/content/docs/docs/use-cases/air-gapped.mdx
@@ -39,7 +39,7 @@ Distr offers two approaches to support these environments:
     1. Set Up Your [Registry](/docs/guides/container-registry/)
     2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
     3. White-label the [Customer portal](/docs/product/branding/)
-    4. Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)
+    4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
     5. Request IP Allowlist for Customer Access
     6. Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)
     7. Customer can [access and pull](/docs/guides/container-registry-for-end-customers/#registry-quickstart-from-the-customer-portal) your private artifacts
