--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -46,7 +46,7 @@ are running the same version of the infrastructure and application.
 1. Set Up Your [Registry](/docs/guides/container-registry/)
 2. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
 3. White-label the [Customer portal](/docs/product/branding/)
-4. Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)
+4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
 5. Reach out to the Distr team to connect the customer's target environment _(We are working hard on automating this step)_
 6. Manage deployments and updates of your app directly for the customer using the [Distr agents](/docs/product/agents/)
 
