--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -14,7 +14,7 @@ Start with these essential guides to set up your first applications and customer
 
 - **[Onboarding a Docker App](/docs/guides/onboarding-a-docker-app/)** - Package and deploy Docker applications using Distr's deployment agent
 - **[Onboarding a Helm App](/docs/guides/onboarding-a-helm-app/)** - Deploy Kubernetes applications with Helm charts
-- **[Onboarding a New Customer](/docs/guides/onboarding-a-new-customer/)** - Create customer accounts and grant access to your software
+- **[Onboarding a New Customer](/docs/product/rbac/#inviting-customer-organization-users)** - Create customer accounts and grant access to your software
 - **[How to Set Up and Use the Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
 
 ## Configuration & Customization
