--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -44,7 +44,7 @@ This is especially useful in setups where a platform team deploys the applicatio
 1. Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)
 2. (Optional) Set Up Your [Registry](/docs/guides/container-registry/)
 3. White-label the [Customer portal](/docs/product/branding/)
-4. Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)
+4. Onboard your first [customer](/docs/product/rbac/#inviting-customer-organization-users)
 5. Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)
 6. Customer deploys your application via the Dist [agents](/docs/guides/container-registry-for-end-customers/#deployment-agent-quickstart-from-the-customer-portal)
 
