feat: add subscription documentation (#207)
Signed-off-by: Philip Miglinci <pmig@glasskube.com>
Co-authored-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/blog/distr-docs.mdx
+++ b/src/content/blog/distr-docs.mdx
@@ -208,7 +208,7 @@ Here, we address questions such as "What exactly is Distr?", "Who is it built fo
 
 <div
   className="app-frame mac dark borderless shadow--tl"
-  data-url="distr.sh/docs/getting-started/what-is-distr/">
+  data-url="distr.sh/docs/">
   ![Screenshot of the Distr
   docs](../../assets/blog/2025-05-23-distr-docs/9e0436c7-839a-40b5-8e0a-073cd80d6adf.png)
 </div>
@@ -283,6 +283,6 @@ We would like to get your opinion.
 Which of the two documentation frameworks do you prefer?
 
 - [`glasskube.dev`](https://glasskube.dev) built with Docusaurus
-- [`distr.sh`](https://distr.sh/docs/getting-started/what-is-distr/) built with Starlight
+- [`distr.sh`](/docs/) built with Starlight
 
 P.S.: Read all our announcements of this week's launch week here: [`#distr-launch-week`](/blog/)
