--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -1,8 +1,9 @@
 ---
 title: Quickstart
 description: Complete three interactive tutorials to set up your registry, deploy your first application, and onboard your first customer.
+slug: docs/quickstart
 sidebar:
-  order: 3
+  order: 4
 ---
 
 import {Aside} from '@astrojs/starlight/components';
@@ -47,7 +48,7 @@ Upon completion, you'll be ready to:
 
 1. **Onboard Your Own Applications:** Add your [Docker Compose](/docs/guides/onboarding-a-docker-app/) or [Helm chart-based applications](/docs/guides/onboarding-a-helm-app/) to Distr
 2. **Push Your Artifacts:** Store your artifacts in your private [registry](/docs/product/registry/)
-3. **Invite Customers:** Invite new [customers](/docs/guides/onboarding-a-new-customer/) into your organization
+3. **Invite Customers:** Invite new [customers](/docs/product/rbac/#inviting-customer-organization-users) into your organization
 
 ### Next, explore the Use cases section
 
