--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -1,17 +1,16 @@
 ---
-title: Run Distr on macOS
+title: Run Distr Agents on macOS
 description: To run Distr on macOS, you need to configure Docker Desktop, reset the Docker context to default, and update your Docker config to avoid credential store issues.
 sidebar:
-  order: 6
+  order: 1
 ---
 
-import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
+import {Aside} from '@astrojs/starlight/components';
 
-Distr is designed to be as versatile as possible. That involves being able to run on a variety of operating systems successfully. While most enterprise environments run on Linux-based VMs, there are always exceptions. What if, for testing purposed for instance, macOS is the chosen operating system for running Distr agents?
-
-If you're using Windows or Linux, the [Quickstart guide](/docs/getting-started/quickstart/) should cover everything you need. But if you're setting up Distr on macOS, follow these steps to ensure a smooth deployment experience.
-
-## Running Distr agents
+Distr is designed to be as versatile as possible.
+That involves being able to run on a variety of operating systems successfully.
+While most enterprise environments run on Linux-based VMs, there are always exceptions.
+What if, for testing purposed, for instance, macOS is the chosen operating system for running Distr agents?
 
 <Aside type="note">
   When we talk about "running Distr," we're specifically referring to running
@@ -22,153 +21,97 @@ If you're using Windows or Linux, the [Quickstart guide](/docs/getting-started/q
   through Distr.
 </Aside>
 
-## Prerequisites
-
-Before you begin, make sure you have:
-
-- A macOS system with admin access
-- [Docker Desktop](https://www.docker.com/products/docker-desktop/) installed
-- Access to the [Distr platform](https://app.distr.sh/)
+If you're using Windows or Linux, the [Quickstart guide](/docs/quickstart/) should cover everything you need.
+But if you're setting up Distr on macOS, follow these steps to ensure a smooth deployment experience.
 
 ## 1. Install Docker Desktop
 
-First, install [Docker Desktop for Mac](https://docs.docker.com/desktop/setup/install/mac-install/). Follow the installation instructions provided by Docker.
+First, install [Docker Desktop for Mac](https://docs.docker.com/desktop/setup/install/mac-install/).
+Follow the installation instructions provided by Docker.
 
 ### 1.1 Delete Distr volume on Docker Desktop
 
-<Aside type="note">
-  If you've already tried to install Distr on Docker Desktop and failed to
-  deploy an application, a volume named `distr_scratch` has been created. This
-  volume is used to store the Distr agent's data. If it exists, you need to
-  delete it.
-</Aside>
+If you've already tried to install Distr on Docker Desktop and failed to
+deploy an application, a volume named `distr_scratch` has been created. This
+volume is used to store the Distr agent's data. If it exists, you need to
+delete it.
 
-Delete the volume, run:
+**Delete the volume, run:**
 
 ```sh
 docker volume rm distr_scratch
 ```
 
-## 2. Verify the Docker Context
+## 2. Set the Docker Context to `default`
 
-<Aside type="caution">
-  When Docker Desktop runs on macOS, it creates a lightweight Linux VM, and the
-  `desktop-linux` context points to the Docker daemon within this VM. However,
-  Distr expects to connect to the default Docker socket
-  (`/var/run/docker.sock`). This mismatch can cause connectivity issues,
-  especially when pulling or deploying container images. Setting the context to
-  `default` aligns the Docker CLI with the expected Docker endpoint, ensuring
-  Distr can interact with the Docker daemon properly.
-</Aside>
+When Docker Desktop runs on macOS, it creates a lightweight Linux VM, and the
+`desktop-linux` context points to the Docker daemon within this VM. However,
+Distr expects to connect to the `default` Docker socket
+(`/var/run/docker.sock`). This mismatch can cause connectivity issues,
+especially when pulling or deploying container images. Setting the context to
+`default` aligns the Docker CLI with the expected Docker endpoint, ensuring
+Distr can interact with the Docker daemon properly.
 
-Check the current Docker context, run:
-
-```sh
-docker context ls
-```
-
-Expected output:
-
-```sh
-NAME              DESCRIPTION                               DOCKER ENDPOINT                                  ERROR
-default           Current DOCKER_HOST based configuration   unix:///var/run/docker.sock
-desktop-linux *   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
-```
-
-If Docker is set to the `desktop-linux` context, you might encounter errors in the container logs like:
-
-```sh
-unable to get image 'postgres:17.3-alpine3.20': Cannot connect to the Docker daemon at unix:///Users/jakepage/.docker/run/docker.sock. Is the docker daemon running?
-```
-
-## 3. Set the Docker Context to `default`
-
-To switch the Docker context to `default`, run:
+**Set the current Docker context to `default`, run:**
 
 ```sh
 docker context use default
+docker context ls
 ```
 
-Expected output:
+<Aside type="tip">
+  The currently configured context is marked with an *, which should be next to
+  `default`.
+</Aside>
 
-```sh
-NAME            DESCRIPTION                               DOCKER ENDPOINT                                  ERROR
+**Verify the current Docker context is set to `default`:**
+
+```text
+NAME            DESCRIPTION                               DOCKER ENDPOINT
 default *       Current DOCKER_HOST based configuration   unix:///var/run/docker.sock
-desktop-linux   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
+desktop-linux   Docker Desktop                            unix:///Users/you/.docker/run/docker.sock
 ```
 
-## 4. Update the Docker Config File
+## 3. Disable `credStore` usage for authentication
 
-If you're using the Distr agent on macOS, note that it does not rely on Docker's credential store (`credStore`). Having this setting in your Docker configuration can sometimes cause authentication issues. To prevent potential errors, it's best to remove the `credStore` entry from the Docker config file entirely.
+If you're using the Distr agent on macOS, docker uses macOS's credential manager (`credStore`).
+As the Distr agent does not have access to your user credential manager, we need to disable that feature.
+It's best to remove the `credStore` entry from the Docker config file entirely that will configure Docker to store
+registry authentications in a file which the agent has access to.
 
-#### How to fix it
+**Open the config file in a text editor**
 
-1. **Check your current Docker config file**
+Use `open -e` to edit the Docker configuration in your text editor:
 
-   Run the following command to inspect your configuration:
+```shell
+open -e ~/.docker/config.json
+```
 
-   ```sh
-   cat ~/.docker/config.json
-   ```
+**Remove the `credStore` line**
 
-   If you see an entry like this:
+Inside the file, find the line that contains:
 
-   ```json
-   {
-     "auths": {},
-     "credStore": "desktop"
-   }
-   ```
+```text
+"credStore": "desktop"
+```
 
-   You'll need to remove the `credStore` line.
+Delete this line entirely, ensuring you **don't leave a trailing comma** that could cause JSON parsing errors.
 
-2. **Open the config file in a text editor**
+After editing, your file should look something like this:
 
-   Use `nano` to edit the Docker configuration:
+```json
+{
+  "auths": {}
+}
+```
 
-   ```sh
-   nano ~/.docker/config.json
-   ```
+Remember to save and close the file.
 
-3. **Remove the `credStore` line**
+## 4. Test the Setup
 
-   Inside the file, find the line that contains:
-
-   ```json
-   "credStore": "desktop"
-   ```
-
-   Delete this line entirely, ensuring you don't leave a trailing comma that could cause JSON parsing errors.
-
-   After editing, your file should look something like this:
-
-   ```json
-   {
-     "auths": {}
-   }
-   ```
-
-4. **Save the file**
-   - **Press `CTRL + X`** to exit.
-   - **Press `Y`** to confirm saving the changes.
-   - **Press `Enter`** to save with the same filename.
-
-5. **Verify the change**
-
-   Run:
-
-   ```sh
-   cat ~/.docker/config.json
-   ```
-
-   Ensure that the `credStore` line is no longer present.
-
-Removing the `credStore` setting ensures that the Distr agent operates without credential store conflicts, reducing potential authentication issues.
-
-## 6. Test the Setup
-
-To verify everything is configured correctly, try [deploying an application](/docs/guides/onboarding-a-docker-app/#creating-a-new-deployment) through Distr. If there are no errors related to Docker socket access, your setup is good to go.
+To verify everything is configured correctly, try [deploying an application](/docs/guides/onboarding-a-docker-app/) through Distr.
+If there are no errors related to Docker socket access, your setup is good to go.
 
 ---
 
-With these steps, your MacOS environment should be fully configured to run Distr agents without issues. If you encounter any problems, feel free to reach out to us on [Discord](https://discord.gg/6qqBSAWZfW) or via email at support@glasskube.com.
+With these steps, your macOS environment should be fully configured to run Distr agents without issues. If you encounter any problems, feel free to reach out to us on [Discord](https://discord.gg/6qqBSAWZfW) or via email at support@glasskube.com.
