--- a/src/content/docs/docs/guides/index.mdx
+++ b/src/content/docs/docs/guides/index.mdx
@@ -14,7 +14,7 @@ Start with these essential guides to set up your first applications and customer
 
 - **[Onboarding a Docker App](/docs/guides/onboarding-a-docker-app/)** - Package and deploy Docker applications using Distr's deployment agent
 - **[Onboarding a Helm App](/docs/guides/onboarding-a-helm-app/)** - Deploy Kubernetes applications with Helm charts
-- **[Onboarding a New Customer](/docs/guides/onboarding-a-new-customer/)** - Create customer accounts and grant access to your software
+- **[Onboarding a New Customer](/docs/product/rbac/#inviting-customer-organization-users)** - Create customer accounts and grant access to your software
 - **[How to Set Up and Use the Registry](/docs/guides/container-registry/)** - Configure your registry and start distributing software
 
 ## Configuration & Customization
@@ -28,7 +28,8 @@ Configure your applications and customize the deployment experience:
 
 Manage customer access and their deployment experience:
 
-- **[License Management](/docs/guides/license-mgmt/)** - Control which application versions customers can access
+- **[Application Licenses](/docs/guides/application-licenses/)** - Control which application versions customers can access and deploy
+- **[Artifact Licenses](/docs/guides/artifact-licenses/)** - Control which artifacts and tags customers can access in your registry
 - **[End-Customer View of Distr](/docs/guides/container-registry-for-end-customers/)** - Understanding the customer portal experience
 
 ## Platform Setup
