--- a/src/content/docs/privacy-policy.mdx
+++ b/src/content/docs/privacy-policy.mdx
@@ -162,7 +162,7 @@ We may update this policy from time to time. When we do:
 - We'll update the "Last Updated" date
 - We'll notify you if the changes are significant
 
-Latest version is always available at: glasskube.dev/privacy-policy
+Latest version is always available at: [distr.sh/privacy-policy/](/privacy-policy/)
 
 ---
 
