--- a/src/content/glossary/oci-container-artifact-registry.mdx
+++ b/src/content/glossary/oci-container-artifact-registry.mdx
@@ -110,7 +110,7 @@ Some examples of OCI registries include:
 #### Hosted:
 
 - [JFrog Artifactory](https://jfrog.com/artifact-management/)
-- [Distr](https://glasskube.dev/)
+- [Distr](/)
 - [Google Artifact Registry](https://cloud.google.com/artifact-registry/docs)
 - [Docker Hub](https://www.docker.com/blog/announcing-docker-hub-oci-artifacts-support/)
 - [Cloudsmith Registry](https://help.cloudsmith.io/docs/oci-repository)
